--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,7 +19,9 @@
 	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	ga('create', 'UA-158824002-1', 'auto');
+	ga('require', 'GTM-545FM49');
 	ga('send', 'pageview');
+
 	</script>
 </head>
 
