--- a/views/project.handlebars
+++ b/views/project.handlebars
@@ -26,6 +26,7 @@
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-158824002-1', 'auto');
+    ga('require', 'GTM-545FM49');
     ga('send', 'pageview');
     </script>
   </head>
